WIP: Gateway service and ExceptionHandler  implemented